# RNA_seq_read_quantification_pipeline

./: .gitignore  LICENSE  README.md  RNA_seq_read_quant_DESeq2.R  RNA_seq_read_quant_config.yaml  RNA_seq_read_quant_merge_quants.py  RNA_seq_read_quant_snakefile.smk  RNA_seq_read_quant_sum_transcript_to_gene.py  RNA_seq_read_quant_tpm_boxplot_generator.R  data_config.yaml  environment.yaml  pyproject.toml  workflow.smk
envs/: RNA_seq_read_quant_env.yaml  deseq2_env.yaml  fastqc_env.yaml  multiqc_env.yaml  python_analysis_env.yaml  r_analysis_env.yaml  salmon_env.yaml
functions/: merge_quants.py
scripts/: lint.sh
src/rna_seq_quant/: workflow.smk
src/rna_seq_quant/functions/: merge_quants.py  sum_transcript_to_gene.py
tests/: test_merge_quants.py  test_sum_transcript_to_gene.py
